Replace IOUtils with InputStream.readAllBytes